@@ -1,5 +1,9 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Feb-08-2010 patrick     Changed gadget::Event::getSource() to return a
+                        reference instead of a pointer. Added a non-const
+                        overload of same.
+                        NEW VERSION: 1.3.26
 Jan-02-2010 patrick     Added public virtual methods
                         gadget::InputArea::lockMouse() and
                         gadget::InputArea::unlockMouse() so that code that gets
